--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="styles/style.min.css">
 
-  <script src="js/accordion.js"></script>
+  <script src="js/accordion.js" defer></script>
 </head>
 <body>
   <!-- header (start) -->
