adds blocking scroll under modal

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="styles/style.min.css">
 
+  <script src="js/blockscroll.js" defer></script>
   <script src="js/accordion.js" defer></script>
   <script src="js/smoothScroll.js" defer></script>
   <script src="js/tabs.js" defer></script>
